# uopsim

./: CMakeLists.txt  README.md  uopsim
apps/: compare_cpus.cpp  polyval_bench.cpp  xctr_bench.cpp  xctr_polyval_bench.cpp
include/: argument.hpp  cpu_model.hpp  instruction.hpp  isa.hpp  scheduler.hpp  uops.hpp
include/algo/: polyval.hpp  xctr.hpp  xctr_polyval.hpp
include/core/: cpu_model.hpp  header.hpp  instruction.hpp  isa.hpp  scheduler.hpp  uops.hpp
include/cpus/: sappirerapids.hpp  zen4.hpp  zen5.hpp
include/isa/: sappirerapids_isa.hpp  zen4_isa.hpp  zen5_isa.hpp
src/: main.cpp
